# UFC_Predictor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  beef_up.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
config/: base.yaml  dev.yaml  prod.yaml
data/: training_data.csv  ufc_fighters.csv
data/expectations/: interim_to_processed.json  raw_to_interim.json
data/models/age_vectors/: LW.json
data/processed/: metrics.csv  upcoming_predictions.csv
data/tests/: market_snapshots.csv  upcoming_cards.csv
docs/: API_SPEC.md  CONTRIBUTING.md  DATA_GOVERNANCE.md  DATA_SOURCES.md  ELO_DESIGN.md  GLOSSARY.md  MIGRATION_NOTES.md  MODELING_NOTES.md  MODEL_CARD.md  ODDS_MATH.md  OPERATIONS.md  RISK_POLICY.md  SCRAPER_HEALTH.md  SYSTEM_OVERVIEW.md  UI_GUIDE.md
model/: clf.pkl  features.txt  scrape_ufcstats.py  train.py
notebooks/: 01_exploration.ipynb  02_feature_checks.ipynb  03_model_cards.ipynb
src/ufc_winprob/: __init__.py  cli.py  evaluation.py  logging.py  settings.py
src/ufc_winprob/api/: __init__.py  main.py  schemas.py
src/ufc_winprob/cleaning/: entity_resolution.py  feature_coercions.py  normalize_bouts.py  normalize_fighters.py
src/ufc_winprob/data/: schemas.py
src/ufc_winprob/data_quality/: __init__.py  great_expectations.py
src/ufc_winprob/features/: age_curve.py  component_elo.py  elo_updater.py  feature_builder.py  style_taxonomy.py
src/ufc_winprob/ingestion/: odds_api_client.py  schedule_upcoming.py  tapology_scraper.py  ufcstats_scraper.py
src/ufc_winprob/jobs/: scheduler.py
src/ufc_winprob/models/: __init__.py  backtest.py  calibration.py  persistence.py  predict.py  selection.py  training.py
src/ufc_winprob/observability/: __init__.py  metrics.py
src/ufc_winprob/pipelines/: __init__.py  build_dataset.py  daily_refresh.py  update_upcoming.py
src/ufc_winprob/scripts/: bootstrap.sh  download_sample_data.py  run_all.sh
tests/: conftest.py  test_age_curves.py  test_api.py  test_api_contract.py  test_api_main.py  test_api_markets.py  test_api_predict.py  test_backtest.py  test_component_elo.py  test_data_quality.py  test_data_quality_gate.py  test_entity_resolution.py  test_feature_builder.py  test_odds_math.py  test_predict.py  test_scheduler.py  test_schemas.py  test_selection.py  test_training.py  test_utils_metrics.py
(+12 files in other folders)
