[project]
name = "ufc-winprob"
version = "0.1.0"
description = "Component-wise Elo and machine learning system for UFC win probability estimation"
authors = ["UFC Win Probability Team <dev@ufc-winprob.local>"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
    "tenacity>=8.2",
    "loguru>=0.7",
    "prometheus-client>=0.17",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "streamlit>=1.32",
    "fastapi>=0.105",
    "uvicorn[standard]>=0.24",
    "typer>=0.9",
    "rich>=13.6",
    "statsmodels>=0.14",
    "optuna>=3.4",
    "mlflow>=2.9",
    "duckdb>=0.9",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "prometheus-client>=0.17",
    "patsy>=0.5",
    "plotly>=5.18",
    "jinja2>=3.1",
    "apscheduler>=3.10",
    "orjson>=3.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.87",
    "black>=23.11",
    "ruff>=0.1.6",
    "mypy>=1.6",
    "types-requests",
    "types-python-dateutil",
    "types-PyYAML",
    "bandit>=1.7",
    "pip-audit>=2.7"
]

[project.scripts]
ufc = "ufc_winprob.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.ruff]
line-length = 100
src = ["src", "tests"]
select = ["E", "F", "B", "I", "UP", "N", "S", "C4", "DTZ", "Q", "RUF", "ANN", "D", "A", "TID"]
ignore = ["D100", "D104", "D401"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D101", "D102", "D103"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --cov=ufc_winprob --cov-report=term-missing"
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
plugins = []
warn_unused_configs = true
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.coverage.run]
branch = true
source = ["src/ufc_winprob"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.hatch.build.targets.wheel]
packages = ["src/ufc_winprob"]
